--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pr-openrave (0.9.3-6trusty) unstable; urgency=medium
+
+  * Pulled changes from upstream.
+
+ -- Michael Koval <mkoval@ubuntu>  Wed, 27 Jul 2016 16:53:22 -0400
+
 pr-openrave (0.9.2-6trusty) unstable; urgency=medium
 
   * Removed octave runtime dependency.
