--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pr-openrave (0.9.4-0) trusty; urgency=medium
+
+  * Imported Upstream version 0.9.4
+
+ -- Michael Koval <mkoval@ubuntu>  Wed, 27 Jul 2016 17:38:58 -0400
+
 pr-openrave (0.9.3-0trusty) unstable; urgency=medium
 
   * Pulled changes from upstream.
