--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pr-openrave (0.9.4.ppa11~trusty) trusty; urgency=medium
+
+  * Initial release to the Personal Robotics Lab's PPA
+
+ -- Jeongseok Lee <jslee02@gmail.com>  Wed, 20 Sep 2017 17:00:00 -0800
+
 pr-openrave (0.9.4-0) trusty; urgency=medium
 
   * Imported Upstream version 0.9.4
